# Sentra-CLI

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  models.tsv  sentra.conf
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  sentra  sentra_tests
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake  sentra  sentra_tests
build-dbg/: CMakeCache.txt  Makefile  cmake_install.cmake  sentra  sentra_tests
docs/: ARCHITECTURE.md  OPERATIONS.md
include/sentra/: app_state.hpp  config.hpp  context_window.hpp  model_registry.hpp  orchestrator.hpp  repl.hpp  runtime.hpp  session_store.hpp  types.hpp
models/: Mistral-7B-Instruct-v0.3-Q4_K_M.gguf
scripts/: download_model.sh
src/: main.cpp
src/cli/: repl.cpp
src/core/: app_state.cpp  context_window.cpp  model_registry.cpp  orchestrator.cpp  session_store.cpp
src/runtime/: llama_inproc_runtime.cpp  local_binary_runtime.cpp  mock_runtime.cpp
tests/: smoke_repl.sh  test_main.cpp
